# cyopt

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cyopt/: __init__.py  _cache.py  _checkpoint.py  _types.py  base.py  checkpoint.py  types.py
cyopt/frst/: __init__.py  _encoding.py  _result.py  _wrapper.py
cyopt/optimizers/: __init__.py  _neighbors.py  basin_hopping.py  best_first_search.py  differential_evolution.py  ga.py  greedy_walk.py  mcmc.py  neighbors.py  random_sample.py  simulated_annealing.py
cyopt/spaces/: __init__.py  _base.py  _graph.py  _tuple.py
data/: h11_23_face_triangs.npz  precompute_volumes.py
documentation/source/: conf.py  cyopt.base.rst  cyopt.checkpoint.rst  cyopt.frst.rst  cyopt.optimizers.basin_hopping.rst  cyopt.optimizers.best_first_search.rst  cyopt.optimizers.differential_evolution.rst  cyopt.optimizers.ga.rst  cyopt.optimizers.greedy_walk.rst  cyopt.optimizers.mcmc.rst  cyopt.optimizers.neighbors.rst  cyopt.optimizers.random_sample.rst  cyopt.optimizers.rst  cyopt.optimizers.simulated_annealing.rst  cyopt.rst  cyopt.spaces.rst  cyopt.types.rst  index.rst
notebooks/: frst_optimization.ipynb  generic_optimizers.ipynb  mori_cone_cap.ipynb
tests/: conftest.py  test_base.py  test_basin_hopping.py  test_best_first_search.py  test_cache.py  test_callbacks.py  test_checkpoint.py  test_differential_evolution.py  test_ga.py  test_greedy_walk.py  test_integration.py  test_mcmc.py  test_notebook_api_surface.py  test_random_sample.py  test_readme_quickstart.py  test_result.py  test_seeding.py  test_simulated_annealing.py
(+62 files in other folders)
