[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyopt"
version = "0.1.0"
description = "Discrete optimization toolkit for bounded integer-tuple search spaces"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Elijah Sheridan"},
]
dependencies = [
    "numpy>=1.24",
    "tqdm>=4.60",
]

[project.optional-dependencies]
frst = ["cytools"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["cyopt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
